--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Install Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: NPM install and run
+        run: |
+          npm install
+          npm run build
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
