--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,11 @@ jobs:
         with:
           node-version: '14'
 
-      - name: NPM install and run
-        run: |
-          npm install
-          npm run build
+      - name: NPM install
+        run: npm install
+
+      - name: NPM build
+        run: npm run build
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
