Added docker cache

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/alexandra:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/alexandra:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/alexandra:buildcache,mode=max
